# postsack

./: Cargo.toml  README.md  build_mac.sh
.cargo/: config.toml
.github/workflows/: deploy.yml  rust.yml
core/: Cargo.toml
core/src/: importer.rs  lib.rs
core/src/model/: engine.rs
core/src/model/types/: loading_state.rs  segment.rs
core/src/types/: config.rs  mod.rs
icons/: Icon.icns
postsack/: .gitignore  Cargo.toml
postsack-cli/: Cargo.toml  Readme.md
postsack-cli/src/: main.rs
postsack-native/: Cargo.toml  Readme.md  build_linux.sh  build_mac.sh  build_windows.bat  shell.nix
postsack-native/src/: main.rs
postsack-native/tests/: test_engine.rs  test_importer.rs
postsack-native/tests/resources/applemail/INBOX.mbox/: 1.emlx  2.emlx
postsack-native/tests/resources/maildir/.INBOX.toto.titi.tutu/cur/: 1586168203.M607836P32643.verdi,S=1277,W=1307_2,S
postsack-native/tests/resources/maildir/.INBOX.toto.titi.tutu/new/: 1586168224.M312866P32659.verdi,S=1281,W=1311_2,
postsack-native/tests/resources/maildir/.INBOX.toto.titi/cur/: 1586168203.M607836P32643.verdi,S=1277,W=1307_2,S
postsack-native/tests/resources/maildir/.INBOX.toto.titi/new/: 1586168224.M312866P32659.verdi,S=1281,W=1311_2,
postsack-native/tests/resources/maildir/.INBOX.toto/.coincoin/.coucou/cur/: 1586168216.M509744P32655.verdi,S=1293,W=1323_2,S
postsack-native/tests/resources/maildir/.INBOX.toto/.coincoin/.coucou/new/: 1586168229.M335379P32663.verdi,S=1281,W=1311_2,
postsack-native/tests/resources/maildir/.INBOX.toto/.coincoin/cur/: 1586168216.M509744P32655.verdi,S=1293,W=1323_2,S
postsack-native/tests/resources/maildir/.INBOX.toto/.coincoin/new/: 1586168229.M335379P32663.verdi,S=1281,W=1311_2,
postsack-native/tests/resources/maildir/.INBOX.toto/cur/: 1586168216.M509744P32655.verdi,S=1293,W=1323_2,S
postsack-native/tests/resources/maildir/.INBOX.toto/new/: 1586168229.M335379P32663.verdi,S=1281,W=1311_2,
postsack-native/tests/resources/maildir/.many_messages/cur/: msg002.txt  msg003.txt  msg004.txt  msg005.txt  msg006.txt  msg007.txt  msg008.txt  msg009.txt  msg010.txt  msg011.txt  msg012.txt  msg013.txt  msg014.txt  msg015.txt  msg016.txt  msg017.txt  msg018.txt  msg019.txt  msg020.txt  msg021.txt  msg022.txt  msg023.txt  msg024.txt  msg025.txt  msg026.txt  msg027.txt  msg028.txt  msg029.txt  msg030.txt  msg031.txt  msg032.txt  msg033.txt  msg034.txt  msg035.txt  msg036.txt  msg037.txt  msg038.txt  msg039.txt  msg040.txt  msg041.txt  (+958 more)
postsack-native/tests/resources/maildir/.many_messages/new/: msg001.txt
postsack-native/tests/resources/mbox/: SENT.mbox
postsack-web/: Cargo.toml  Readme.md  build_web.sh
postsack-web/fake_data/: Readme.md  data--IPvB4FMSjqwEG5c10iuy.json  data-8Xny-PeJzIg-cYabNaw4p.json  data-F71a4_eQ7Jjiu4iWKIgcd.json  data-GWmTkeZNoj6qD6UNVVW_p.json  data-Pbxp6v6DfkpmbIr-66RLI.json  data-Q1f_96KKxXHqysRR6QDhg.json  data-T1wrr2f6grtcTU_vusruV.json  data-iRwElAWh0ABnMB8YUP0ff.json  data-nbhX4DRvp1Zfo41ZZAN4h.json  data-xvFiEU_22_s2lgiQk8uLw.json  generate.py
postsack-web/src/: database.rs  generated.rs  lib.rs
postsack-web/web_demo/: index.html
postsack/src/: main.rs
postsack/tests/: test_importer.rs
ps-core/: Cargo.toml
ps-core/src/: importer.rs  lib.rs  message_adapter.rs
ps-core/src/database/: database_like.rs  db_message.rs  mod.rs  query.rs
ps-core/src/model/: engine.rs  items.rs  link.rs  mod.rs  segmentations.rs
ps-core/src/model/types/: aggregation.rs  mod.rs  rect.rs  segmentation.rs
ps-core/src/types/: config.rs  email.rs  format_type.rs  mod.rs
ps-database/: Cargo.toml
ps-database/src/: conversion.rs  db.rs  db_message.rs  lib.rs  sql.rs
ps-gui/: Cargo.toml  build_web.sh
ps-gui/src/: app.rs  lib.rs  mail_panel.rs  navigation_bar.rs  segmentation_bar.rs  textures.rs
ps-gui/src/app_state/: error.rs  import.rs  main.rs  mod.rs  startup.rs
ps-gui/src/platform/: linux.rs  macos.rs  mod.rs  web.rs  windows.rs
ps-gui/src/widgets/: background.rs  color_utils.rs  filter_panel.rs  popover.rs  rectangles.rs  spinner.rs  table.rs
ps-importer/: Cargo.toml
ps-importer/src/: importer.rs  lib.rs  message_adapter.rs
ps-importer/src/formats/: mod.rs
ps-importer/src/formats/apple_mail/: filesystem.rs  mail.rs  mod.rs
ps-importer/src/formats/gmailbackup/: meta.rs  mod.rs  raw_email.rs
ps-importer/src/formats/maildir_mail/: mod.rs
ps-importer/src/formats/mbox/: mod.rs
ps-importer/src/formats/shared/: database.rs  filesystem.rs  mod.rs  parse.rs
resources/: postsack_logo.sketch
src/: canvas_calc.rs  database.rs  emails.rs  filesystem.rs  lib.rs  main.rs
src/cluster_engine/: calc.rs  engine.rs  into_request.rs  items.rs  link.rs  mod.rs  partitions.rs  segmentation.rs  types.rs
src/cluster_engine/types/: segment.rs
src/database/: conversion.rs  database.rs  db.rs  db_message.rs  mod.rs  query.rs  query_result.rs  sql.rs
src/gui/: app.rs  mail_panel.rs  mod.rs  navigation_bar.rs  segmentation_bar.rs  state.rs  test.rs  textures.rs  top_bar.rs
src/gui/app_state/: error.rs  import.rs  main.rs  mod.rs  startup.rs  visualize.rs
src/gui/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/gui/widgets/: background.rs  error_box.rs  filter_panel.rs  mod.rs  popover.rs  rectangles.rs  spinner.rs  table.rs  top_bar.rs
src/importer/: importer.rs  message_adapter.rs  mod.rs
src/importer/formats/: importer.rs  mod.rs
src/importer/formats/apple_mail/: filesystem.rs  mail.rs  mod.rs
src/importer/formats/gmailbackup/: filesystem.rs  meta.rs  mod.rs  raw_email.rs
src/importer/formats/mbox/: mod.rs
src/importer/formats/shared/: database.rs  email.rs  filesystem.rs  mod.rs  parse.rs
src/importer/parse/: emails.rs  gmail_meta.rs  mod.rs
src/importer/types/: email.rs  mod.rs
src/model/: engine.rs  items.rs  link.rs  segmentations.rs
src/model/types/: aggregation.rs  mod.rs  segmentation.rs
src/parse/: emails.rs  gmail_meta.rs
src/types/: config.rs  email.rs  mod.rs
tests/: test_engine.rs  test_importer.rs
tests/resources/applemail/INBOX.mbox/: 3.emlx  4.emlx
