[package]
name = "gmaildb"
version = "0.1.0"
edition = "2018"
description = "Bam"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.bundle.bin.gui]
name = "ExampleApplication"
identifier = "com.doe.exampleapplication"
#icon = ["128x128@2x.png"]
version = "1.0.0"
#resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
category = "Developer Tool"
short_description = "An example application."
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""

[dependencies]
eyre = "0.6.5"
thiserror = "1.0.29"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
rusqlite = {version = "0.25.3", features = ["chrono", "trace", "serde_json"]}
regex = "1.5.3"
flate2 = "1.0.22"
email-parser = { git = "https://github.com/terhechte/email-parser", features = ["sender", "to", "in-reply-to", "date", "subject", "mime", "allow-duplicate-headers", "compatibility-fixes"]}
rayon = "1.5.1"
chrono = "0.4.19"
lazy_static = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"]}
crossbeam-channel = "0.5.1"
eframe = { version = "*", optional = true}
rsql_builder = "0.1.2"
treemap = "0.3.2"
num-format = "0.4.0"
strum = "0.21"
strum_macros = "0.21"
lru = { version = "0.7.0", optional = true }
emlx = { git = "https://github.com/terhechte/emlx", features = []}
walkdir = "*"
mbox-reader = "0.2.0"
rfd = "0.5.1"
rand = "0.8.4"
shellexpand = "*"

[features]
default = ["gui"]
# Trace all SQL Queries
trace-sql = []
gui = ["eframe", "lru"]

[target."cfg(target_os = \"macos\")".dependencies.cocoa]
version = "0.24" 
[target."cfg(target_os = \"macos\")".dependencies.objc]
version = "0.2.7" 

[profile.dev]
split-debuginfo = "unpacked"

#[profile.release]
#lto = "fat"
#codegen-units = 1
#panic = "abort"
