[package]
name = "postsack"
version = "0.2.0"
edition = "2018"
description = "Provides a high level visual overview of swaths of email"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.bundle.bin.gui]
name = "Postsack"
identifier = "com.stylemac.Postsack"
#icon = ["128x128@2x.png"]
version = "1.0.0"
#resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Benedikt Terhechte (2021). All rights reserved."
category = "Developer Tool"
short_description = "Provides a high level visual overview of swaths of email"
long_description = """
Provides a high level visual overview of swaths of email
"""

[dependencies]
eyre = "0.6.5"
thiserror = "1.0.29"
tracing = "0.1.29"
tracing-subscriber = "0.3.0"
rusqlite = {version = "0.25.3", features = ["chrono", "trace", "serde_json"]}
regex = "1.5.3"
flate2 = "1.0.22"
email-parser = { git = "https://github.com/terhechte/email-parser", features = ["sender", "to", "in-reply-to", "date", "subject", "mime", "allow-duplicate-headers", "compatibility-fixes"]}
rayon = "1.5.1"
chrono = "0.4.19"
lazy_static = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"]}
crossbeam-channel = "0.5.1"
eframe = { version = "*", optional = true}
rsql_builder = "0.1.2"
treemap = "0.3.2"
num-format = "0.4.0"
strum = "0.21"
strum_macros = "0.21"
lru = { version = "0.7.0", optional = true }
emlx = { git = "https://github.com/terhechte/emlx", features = []}
walkdir = "*"
mbox-reader = "0.2.0"
rfd = "0.5.1"
rand = "0.8.4"
shellexpand = "*"
image = { version = "0.23", default-features = false, features = ["png"] }

[features]
default = ["gui"]
# Trace all SQL Queries
trace-sql = []
gui = ["eframe", "lru"]

[target."cfg(target_os = \"macos\")".dependencies.cocoa]
version = "0.24" 
[target."cfg(target_os = \"macos\")".dependencies.objc]
version = "0.2.7" 

[profile.dev]
split-debuginfo = "unpacked"

#[profile.release]
#lto = "fat"
#codegen-units = 1
#panic = "abort"
