[package]
name = "ps-core"
version = "0.2.0"
edition = "2021"
description = "Provides a high level visual overview of swaths of email"

[dependencies]
eyre = "0.6.5"
thiserror = "1.0.29"
tracing = "0.1.29"
tracing-subscriber = "0.3.0"
regex = "1.5.3"
flate2 = "1.0.22"
once_cell = "1.8.0"
rayon = "1.5.1"
chrono = "0.4.19"
serde_json = "1.0.70"
serde = { version = "1.0.130", features = ["derive"]}
crossbeam-channel = "0.5.1"
rsql_builder = "0.1.2"
treemap = "0.3.2"
num-format = "0.4.0"
strum = "0.23.0"
strum_macros = "0.23.0"
lru = { version = "0.7.0", optional = true }
rand = "0.8.4"
shellexpand = "2.1.0"

[features]
default = ["lru"]