[package]
name = "ps-core"
version = "1.0.0"
edition = "2021"

[dependencies]
eyre = "0.6.5"
tracing = "0.1.29"
tracing-subscriber = "0.3.0"
once_cell = "1.8.0"
chrono = {version = "0.4.19", features = ["wasmbind"]}
serde_json = "1.0.70"
serde = { version = "1.0.131", features = ["derive"]}
crossbeam-channel = "0.5.1"
rsql_builder = "0.1.2"
treemap = "0.3.2"
strum = "0.23.0"
strum_macros = "0.23.0"
rand = "0.8.4"
lru = { version = "0.7.0"}

[target."cfg(target_arch = \"wasm32\")".dependencies]
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
