[package]
name = "ps-gui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
thiserror = "1.0.29"
tracing = "0.1.29"
tracing-subscriber = "0.3.0"
once_cell = "1.8.0"
crossbeam-channel = "0.5.1"
eframe = "0.15.0"
num-format = "0.4.0"
rand = "0.8.4"
image = { version = "0.23", default-features = false, features = ["png"] }
chrono = "0.4.19"
ps-core = { path = "../ps-core" }

[target."cfg(target_os = \"macos\")".dependencies.cocoa]
version = "0.24" 
[target."cfg(target_os = \"macos\")".dependencies.objc]
version = "0.2.7" 

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
ps-importer = { path = "../ps-importer" }
shellexpand = "2.1.0"
tinyfiledialogs = "3.0"

[target."cfg(target_arch = \"wasm32\")".dependencies]
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
