[package]
name = "ps-gui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.15.0"
num-format = "0.4.0"
chrono = {version = "0.4.19", features = ["wasmbind"]}
ps-core = { path = "../ps-core" }
once_cell = "1.9.0"

[target."cfg(target_os = \"macos\")".dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
cocoa = "0.24"
objc = "0.2.7"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
ps-importer = { path = "../ps-importer" }
shellexpand = "2.1.0"
tinyfiledialogs = "3.0"