[package]
name = "ps-importer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.22"
once_cell = "1.8.0"
rayon = "1.5.1"
emlx = { git = "https://github.com/terhechte/emlx", features = []}
walkdir = "2.3.2"
mbox-reader = "0.2.0"
shellexpand = "2.1.0"
serde_json = "1.0.70"
serde = { version = "1.0.131", features = ["derive"]}
ps-core = { path = "../ps-core" }
maildir = "0.5.0"
mail-parser = "0.4.3"
email-address-parser = "1.0.3"